# BodyMonitoringQt

./: .gitignore  BodyMonitoringQt.desktop  BodyMonitoringQt.pro  CMakeLists.txt  ConfigPars.cpp  ConfigPars.h  EquManageWin.cpp  EquManageWin.h  EquMonitorObj.h  MonitorInfoPanel.cpp  MonitorInfoPanel.h  MonitorPerson.cpp  README.md  XyBaseModel.cpp  XyBaseModel.h  XyKModel.cpp  XyKModel.h  bmDataShow.cpp  bmDataShow.h  bmMainWin.cpp  bmMainWin.h  bmReader.cpp  bmReader.h  dbHelper.cpp  dbHelper.h  dpkgdebmaker.sh  frmAlertSet.cpp  main.cpp  resource.qrc  xqmake.sh  xyTableModel.cpp  xyTableModel.h  xyTableView.h
installfiles/: BodyMonitoringQt.desktop  control  dpkgdebmaker.sh  postinst
src/dbModel/: CMakeLists.txt  Equ.cpp  Equ.h  EquMonitorObj.cpp  MonitorPerson.cpp  MonitorPerson.h  MonitorRoom.h  bmRecord.cpp  bmRecord.h  bmRecordItem.cpp  bmRecordItem.h
src/install/DEB/: postinst
src/mainapp/: BodyMonitoringQt.desktop  CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  EquManageWin.cpp  bmDataShow.cpp  bmDataShow.h  bmMainWin.cpp  bmMainWin.h  bmReader.cpp  frmAlertSet.cpp  frmBmRecordList.cpp  frmBmRecordList.h  frmMonitorInfoSet.cpp  frmMonitorInfoSet.h  frmPerson.cpp  frmPerson.h  frmRoom.cpp  frmRoom.h  xyTableModel.cpp  xyTableView.cpp
src/xyModel/: CMakeLists.txt  XyBaseModel.cpp  XyBaseModel.h  XyKModel.cpp  XyKModel.h  dbHelper.cpp  dbHelper.h
ui/: EquManageWin.cpp  EquManageWin.h  MonitorInfoPanel.cpp  bmDataShow.cpp  bmDataShow.h  bmMainWin.cpp  bmMainWin.h  frmAlertSet.cpp  frmAlertSet.h  xyTableModel.cpp  xyTableModel.h
xyModel/: ConfigPars.cpp  EquMonitorObj.cpp  MonitorRoom.cpp  XyKModel.cpp  XyKModel.h  bmRecordItem.cpp
